<resources>
    <string name="app_name">Rapid Credit</string>
    <string name="common_passwordHint">Password</string>
    <string name="common_emailError">Enter a valid email address</string>
    <string name="common_passwordError">Between 4 and 10 alphanumeric characters</string>

    <!-- Login Screen -->
    <string name="loginscreen_emailHint">Email</string>
    <string name="loginscreen_loginBtnText">Login</string>
    <string name="loginscreen_newAccountText">No Account yet?</string>
    <string name="loginscreen_signUpText"> \t Create one</string>
    <string name="loginscreen_loaderText">Authenticating...</string>

    <!-- SignUp Screen -->
    <string name="signup_toolbarText">Sign Up</string>
    <string name="signup_alreadyMemberText">Already a member?</string>
    <string name="signup_loginText"> \t Login</string>
    <string name="signup_createAccount">Create Account</string>
    <string name="signup_firstNameHint">First Name</string>
    <string name="signup_lastNameHint">Last Name</string>
    <string name="signup_phoneNoHint">Phone Number</string>
    <string name="signup_kycNoHint">KYC Number</string>
    <string name="signup_emailHint">Email</string>
    <string name="signup_upiHint">UPI Number</string>
    <string name="signup_spinnerKYCDocHint">KYC Document</string>
    <string name="signup_spinnerUserTypeHint">User Type</string>
    <string name="signup_rePasswordHint">Confirm Password</string>
    <string name="signup_passwordConfirmError">Passwords do not match</string>
    <string name="signup_spinnerUserTypeError">Choose a user type</string>
    <string name="signup_spinnerKYCDocumentError">Choose a valid KYC Document</string>
    <string name="signup_kycNoError">Enter a valid KYC Number</string>
    <string name="signup_phoneNoError">Enter a valid Phone No.</string>
    <string name="signup_firstNameError">Enter a valid First Name</string>
    <string name="signup_lastNameError">Enter a valid Last Name</string>
    <string name="signup_upiError">Enter a valid UPI Number</string>
    <string name="signup_loaderText">Registering...</string>

    <!-- Dashboard Screen -->
    <string name="dashboard_toolbarText">Dashboard</string>
    <string name="dashboard_loaderText">Loading...</string>
    <string name="dashboard_dialogPostBid">Submit Bid</string>
    <string name="dashboard_dialogOk">OK</string>
    <string name="dashboard_dialogCancel">Cancel</string>
    <string name="dashboard_dialogPostLoaderText">Posting Bid...</string>

    <!-- Add New Project -->
    <string name="addnewproject_toolbarText">Create Campaign</string>
    <string name="addnewproject_titleHint">Title</string>
    <string name="addnewproject_descriptionHint">Description</string>
    <string name="addnewproject_amountHint">Amount Required</string>
    <string name="addnewproject_roiHint">Rate of Interest</string>
    <string name="addnewproject_spinnerTermsOfRepaymentHint">Terms of Repayment</string>
    <string name="addnewproject_spinnerNoOfInstallmentsHint">No. of Installments</string>
    <string name="addnewproject_addNewProject">Create Campaign</string>
    <string name="addnewproject_loaderText">Creating Campaign...</string>
    <string name="addnewproject_titleError">Enter a valid title</string>
    <string name="addnewproject_descriptionError">Enter a valid description</string>
    <string name="addnewproject_rateOfInterestError">Enter a valid value</string>
    <string name="addnewproject_termsOfRepaymentError">Choose a valid Terms of Repayment</string>
    <string name="addnewproject_noOfInstallmentsError">Choose a valid Installment tenure</string>
    <string name="addnewproject_amountError">Enter a valid amount</string>

    <!-- Menu Item -->
    <string name="menu_logout">Logout</string>
</resources>